<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.welyss</groupId>
	<artifactId>binlog-parser-tool</artifactId>
	<version>1.0.0</version>
	<name>binlog-parser-tool</name>
	<description>binlog-parser-tool</description>
	<dependencies>
		<dependency>
			<groupId>com.zendesk</groupId>
			<artifactId>mysql-binlog-connector-java</artifactId>
			<version>0.29.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.14.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<version>2.14.0</version>
		</dependency>
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.9.0</version>
		</dependency>
	</dependencies>
    <build>
        <plugins>
            <plugin><!-- 配置java编译版本, 会影响eclipse的buildpath的jdk版本 -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
                <configuration>
<!--                    <source>21</source>
                    <target>21</target>-->
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin><!-- 打包生成可执行文件 -->
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>appassembler-maven-plugin</artifactId>
                <version>1.10</version>
                <configuration>
                    <copyConfigurationDirectory>false</copyConfigurationDirectory>
                    <includeConfigurationDirectoryInClasspath>false</includeConfigurationDirectoryInClasspath>
                    <assembleDirectory>${project.build.directory}/${project.artifactId}</assembleDirectory>
                    <extraJvmArguments>--add-opens java.base/java.lang=ALL-UNNAMED</extraJvmArguments>
                    <binFileExtensions>
                        <unix>.sh</unix>
                    </binFileExtensions>
                    <platforms>
                        <platform>unix</platform>
                    </platforms>
                    <repositoryName>lib</repositoryName>
                    <repositoryLayout>flat</repositoryLayout>
                    <preAssembleDirectory>${basedir}/WebResources/</preAssembleDirectory>
                    <programs>
                        <program>
                            <id>binlogparser</id>
                            <mainClass>org.welyss.binlog.parser.BinlogExecutor</mainClass>
                        </program>
                    </programs>
                    <useWildcardClassPath>true</useWildcardClassPath>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>